# Murmuration

./: .gitignore  CMakeLists.txt  README.md  README_Installer.txt  conanfile.py
app/: CMakeLists.txt  ParticleSystemApp.cpp  ParticleSystemApp.hpp
midireader/: CMakeLists.txt  MidiReader.cpp  MidiReader.hpp  Note.cpp  Note.h  Note.hpp  PlayingNotes.cpp  PlayingNotes.h  PlayingNotes.hpp  Reader.cpp  Reader.hpp  cmidiin.cpp  cmidiin.h
oscreader/: CMakeLists.txt  NetworkingUtils.cpp  OscPacketListener.h  OscReader.cpp  OscReader.hpp  UdpSocket.cpp  client.hpp  host.hpp  print.hpp  server.hpp  stream.hpp
physics/: Boids.cpp  Boids.hpp  Model.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp
physics/ocl/: Context.cpp  Context.hpp
physics/ocl/kernels/: boids.cl  radixSort.cl
physics/utils/: Define.hpp  RadixSort.cpp  RadixSort.hpp
render/: Camera.cpp  Engine.cpp  Engine.hpp
scripts/: run.sh
ui/: PhysicsWidget.cpp
utils/: Parameters.hpp
